~#PKGNAME#~ (~#VERSION#~) UNRELEASED; urgency=low

  * Please check the https://github.com/~#VENDOR#~/~#PROJECT#~ commit history

 -- Nicola Asuni <info@tecnick.com>  ~#DATE#~