@@ -5,7 +5,7 @@ const AppName = "rndpwd"
 
 // AppVersion contains this application version
 // This is supposed to be automatically populated by the Makefile using the value from the VERSION file
-const AppVersion = "1.1.4"
+const AppVersion = "1.1.5"
 
 // ValidCharset is a string containing the valid characters for a password
 const ValidCharset = "!#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[]^_`abcdefghijklmnopqrstuvwxyz{|}~"
